--- a/app/src/main/res/layout/notify.xml
+++ b/app/src/main/res/layout/notify.xml
@@ -17,6 +17,17 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_open_in_new_white_24dp" />
 
+
+    <ImageButton
+        android:id="@+id/buttonReset"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="#3333B5E5"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_delete_white_24dp" />
+
     <ImageButton
         android:id="@+id/buttonAddWayPoint"
         android:layout_width="64dp"
@@ -32,10 +43,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/buttonReset"
+        android:layout_toStartOf="@+id/buttonReset"
         android:paddingRight="10dp"
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#000000" />
+        android:textColor="#000080" />
 
     <TextView
         android:id="@+id/textViewWP"
